docs/sf-export/sfdx-raw/objects/Debt_Details__c/Debt_Details__c.object-meta.xml
<CustomObject>
    <label>Debt Details</label>
    <nameField>
        <displayFormat>Debt-{0000}</displayFormat>
        <label>Debt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debt Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>