docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debt Details (Account)</relationshipLabel>
    <relationshipName>Debt_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>