docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Loan Account Number. CD-202</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>