docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Active_Opportunity_Debt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity_Debt_Detail__c</fullName>
    <formula>OR(
Opportunity__r.Active_Opportunity__c ,
ISPICKVAL(Opportunity__r.StageName, &quot;Closed Lost&quot;),
AND(
ISPICKVAL(Opportunity__r.StageName, &quot;Archived&quot;),
NOT(ISPICKVAL(Opportunity__r.Sub_Disposition__c , &quot;Opportunity Amended&quot;))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Debt Detail On Account</label>
    <type>Checkbox</type>
</CustomField>