docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Creditor</value>
        </filterItems>
        <filterItems>
            <field>Account.Collection_Agency__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debt Details (Collection Agency)</relationshipLabel>
    <relationshipName>Debt_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>