docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Creditor_Fees__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Fees__c</fullName>
    <label>Creditor Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>