docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Name__c</fullName>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>