docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Creditor_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Name_Formula__c</fullName>
    <formula>IF(   NOT( ISBLANK(Current_Creditor__c)) ,  Current_Creditor__r.Name , Creditor_Name__c)</formula>
    <label>Creditor Name Formula</label>
    <type>Text</type>
</CustomField>