docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Current_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Current_Creditor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Creditor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Creditor</value>
        </filterItems>
        <filterItems>
            <field>Account.Collection_Agency__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debt Details</relationshipLabel>
    <relationshipName>Debt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>