docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Debt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debt_Amount__c</fullName>
    <label>Enrolled Debt Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>