docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Debt_Amount_With_Fees__c.field-meta.xml
<CustomField>
    <fullName>Debt_Amount_With_Fees__c</fullName>
    <formula>Debt_Amount__c  +  Creditor_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt Amount With Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>