docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Debt_Status__c.field-meta.xml
<CustomField>
    <fullName>Debt_Status__c</fullName>
    <label>Debt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Reprieve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>