docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/External_Legacy_CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Legacy_CRM_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Legacy CRM Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>