docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Include_in_the_Program__c.field-meta.xml
<CustomField>
    <fullName>Include_in_the_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in the Program</label>
    <type>Checkbox</type>
</CustomField>