docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Legal_Network__c.field-meta.xml
<CustomField>
    <fullName>Legal_Network__c</fullName>
    <label>Legal Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citadel</fullName>
            </value>
            <value>
                <fullName>Victory Legal Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>