docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summons</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>UCC Lien</fullName>
            </value>
            <value>
                <fullName>Default judgment (no response to legal)</fullName>
            </value>
            <value>
                <fullName>Summary Judgment (awarded by court)</fullName>
            </value>
            <value>
                <fullName>COJ</fullName>
            </value>
            <value>
                <fullName>Summons / UCC Lien</fullName>
            </value>
            <value>
                <fullName>Arbitration / UCC Lien</fullName>
            </value>
            <value>
                <fullName>Active Negotiation</fullName>
            </value>
            <value>
                <fullName>Active Negotiation / Legal</fullName>
            </value>
            <value>
                <fullName>Arbitration Award</fullName>
            </value>
            <value>
                <fullName>Judgement</fullName>
            </value>
            <value>
                <fullName>Active Negotiation/UCC Lien</fullName>
            </value>
            <value>
                <fullName>Dismissed With Prejudice</fullName>
            </value>
            <value>
                <fullName>Dismissed Without Prejudice</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
                <isActive>false</isActive>
                <label>Correspondence</label>
            </value>
            <value>
                <fullName>Counter Signature from the Lender</fullName>
                <isActive>false</isActive>
                <label>Counter Signature from the Lender</label>
            </value>
            <value>
                <fullName>Default judgment  (no response to legal)</fullName>
                <isActive>false</isActive>
                <label>Default judgment  (no response to legal)</label>
            </value>
            <value>
                <fullName>Send it out to the CSR for Client Signature</fullName>
                <isActive>false</isActive>
                <label>Send it out to the CSR for Client Signature</label>
            </value>
            <value>
                <fullName>Settled PIF</fullName>
                <isActive>false</isActive>
                <label>Settled PIF</label>
            </value>
            <value>
                <fullName>Settled lump sum</fullName>
                <isActive>false</isActive>
                <label>Settled lump sum</label>
            </value>
            <value>
                <fullName>Settled payments</fullName>
                <isActive>false</isActive>
                <label>Settled payments</label>
            </value>
            <value>
                <fullName>Summary Judgment  (awarded by court)</fullName>
                <isActive>false</isActive>
                <label>Summary Judgment  (awarded by court)</label>
            </value>
            <value>
                <fullName>Waiting for the Settlement agreement</fullName>
                <isActive>false</isActive>
                <label>Waiting for the Settlement agreement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>