docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Negotiation_Status__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Status__c</fullName>
    <label>Negotiation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settled PIF</fullName>
            </value>
            <value>
                <fullName>Settled payments</fullName>
            </value>
            <value>
                <fullName>Settled lump sum</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
                <label>Need Correspondence</label>
            </value>
            <value>
                <fullName>Waiting for the Settlement agreement</fullName>
            </value>
            <value>
                <fullName>Send it out to the CSR for Client Signature</fullName>
            </value>
            <value>
                <fullName>Counter Signature from the Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>