docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Debt Details</relationshipLabel>
    <relationshipName>Debt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>