docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Original_Debt__c.field-meta.xml
<CustomField>
    <fullName>Original_Debt__c</fullName>
    <description>Debt amount actually owed with lender. Sometimes additional fees and interest are added to the debt amount.</description>
    <label>Actual Debt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>