docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Parent_Debt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Parent_Debt_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Debt Detail</label>
    <referenceTo>Debt_Details__c</referenceTo>
    <relationshipLabel>Debt Details</relationshipLabel>
    <relationshipName>Debt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>