docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>Program_Plan__c</referenceTo>
    <relationshipLabel>Debt Details</relationshipLabel>
    <relationshipName>Debt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>