docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Settlement_Priority__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Settlement Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>