docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Total_Savings_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings_Percentage__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Original_Debt__c)),
  (Original_Debt__c - Settlement_Amount__c) / Original_Debt__c,
  (Debt_Amount__c - Settlement_Amount__c) / Debt_Amount__c
)</formula>
    <label>Total Savings Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>