docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/UCC_Funds_onHold__c.field-meta.xml
<CustomField>
    <fullName>UCC_Funds_onHold__c</fullName>
    <label>UCC Funds OnHold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>