docs/sf-export/sfdx-raw/objects/Debt_Details__c/fields/Valid_Debt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Valid_Debt_Detail__c</fullName>
    <formula>OR(
    AND(
        ISBLANK(Opportunity__r.Opportunity__c),
        OR(
            ISBLANK(TEXT(Opportunity__r.Version_Status__c)),
            TEXT(Opportunity__r.Version_Status__c) = &quot;Pending Client Approval&quot;,
            TEXT(Opportunity__r.Version_Status__c) = &quot;Draft&quot;,
            TEXT(Opportunity__r.Version_Status__c) = &quot;Active&quot;
        )
    ),
    AND(
        NOT(ISBLANK(Opportunity__r.Opportunity__c)),
        TEXT(Opportunity__r.Version_Status__c) = &quot;Active&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Debt Detail</label>
    <type>Checkbox</type>
</CustomField>