docs/sf-export/sfdx-raw/objects/Debt_Details__c/validationRules/Account_Mismatch_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Mismatch_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( $Permission.Bypass_Validation_Rule ),Opportunity__r.AccountId != Account__r.Id)</errorConditionFormula>
    <errorMessage>Account on opportunity and debt details are not matching</errorMessage>
</ValidationRule>