docs/sf-export/sfdx-raw/objects/Debt_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Current_Creditor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>